MB-59829: Move create/delete bucket from NonIO to AuxIO

Creating a bucket may require significant I/O, certainly for magma
buckets that require recovery, hence create is better scheduled to
AuxIO threads.

Delete bucket as well (via EPBucket::deinitialize) cannot be
guaranteed "free" from IO, hence that is also moved to AuxIO.

Change-Id: Ic599e7067f5aa2bd1123ad4a56a85264ff7c1e13
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201621
Tested-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>